--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,16 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="остановлен"
         android:id="@+id/tvBotStatus"
-        android:layout_above="@+id/btnBotOnOff"
-        android:layout_alignEnd="@+id/btnBotOnOff" />
+        android:layout_alignBottom="@+id/tvBotName"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Тест"
+        android:id="@+id/btnTest"
+        android:layout_marginTop="27dp"
+        android:layout_below="@+id/btnBotOnOff"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
